Reverse engineer Java code to UML model