@@ -38,7 +38,6 @@ public class CucumberToUMLOtherLayerConverter extends ToUMLOtherLayerConverter {
 	@Override
 	protected Class convertToClass(ConvertibleFile layerFile) throws Exception {
 		aCucumberJavaFile = (CucumberJavaFile) layerFile;
-		aCucumberJavaFile.read();
 		String qualifiedName = convertAbsolutePathToQualifiedName(aCucumberJavaFile.getFile().getAbsolutePath());
 		Class layerClass = ClassFactory.getClass(UMLProject.theSystem, qualifiedName);
 		return layerClass;
@@ -47,43 +46,41 @@ public class CucumberToUMLOtherLayerConverter extends ToUMLOtherLayerConverter {
 	@Override
 	protected void convertToImports(Class layerClass) throws Exception {
 		if (aCucumberJavaFile.javaClass.getTypes().size() > 0) {
+			// Wrap this in CommentFactory.getComment. getComment should do nothing if the
+			// content is empty
 			Optional<Comment> comment = aCucumberJavaFile.javaClass.getType(0).getComment();
 			if (comment.isPresent()) {
 				CommentFactory.getComment(layerClass, comment.get().getContent());
 			}
+
 			for (ImportDeclaration i : aCucumberJavaFile.javaClass.getImports()) {
 				String anImportName = convertImportNameToQualifiedName(i.getNameAsString());
-				ElementImportFactory.getElementImport(layerClass, anImportName);
+				ElementImport ei = ElementImportFactory.getElementImport(layerClass, anImportName);
 			}
 		}
 	}
 
 	@Override
-	protected void convertToAttributes(Class layerClass) throws Exception {
-		// There are no Java attributes
-	}
-
-	@Override
 	protected void convertToBehaviours(Class layerClass) throws Exception {
-		if (aCucumberJavaFile.javaClass.getTypes().size() > 0) {
-			for (MethodDeclaration md : aCucumberJavaFile.javaClass.getType(0).getMethods()) {
-				Interaction anInteraction = InteractionFactory.getInteraction(layerClass, md.getNameAsString(), true);
+		for (MethodDeclaration md : aCucumberJavaFile.javaClass.getType(0).getMethods()) {
+			Interaction anInteraction = InteractionFactory.getInteraction(layerClass, md.getNameAsString(), true);
 
-				String body;
-				if (md.getJavadocComment().isPresent()) {
-					body = md.getJavadocComment().get().getContent().replace(" * ", "");
-				} else {
-					body = "";
-				}
-				anInteraction.createOwnedComment().setBody(body);
-				if (md.getAnnotations().size() > 0) {
-					AnnotationFactory.getAnnotation(anInteraction, md.getAnnotation(0).toString());
-				}
-				for (Parameter p : md.getParameters()) {
-					ParameterFactory.getParameter(anInteraction, p.getNameAsString(), "", "in");
-				}
-				convertToInteractionMessages(anInteraction, md.getBody().get().getStatements());
+			// Wrap this in CommentFactory.getComment. getComment should do nothing if the
+			// content is empty
+			String body;
+			if (md.getJavadocComment().isPresent()) {
+				body = md.getJavadocComment().get().getContent().replace(" * ", "");
+			} else {
+				body = "";
 			}
+			anInteraction.createOwnedComment().setBody(body);
+			if (md.getAnnotations().size() > 0) {
+				AnnotationFactory.getAnnotation(anInteraction, md.getAnnotation(0).toString());
+			}
+			for (Parameter p : md.getParameters()) {
+				ParameterFactory.getParameter(anInteraction, p.getNameAsString(), "", "in");
+			}
+			convertToInteractionMessages(anInteraction, md.getBody().get().getStatements());
 		}
 	}
 
@@ -94,9 +91,6 @@ public class CucumberToUMLOtherLayerConverter extends ToUMLOtherLayerConverter {
 			if (s.getChildNodes().get(0) instanceof MethodCallExpr) {
 				MethodCallExpr mce = (MethodCallExpr) s.getChildNodes().get(0);
 				convertToMessage(anInteraction, mce);
-			} else {
-				// TODO handle VariableDeclarationExpr for List<List<String>> data =
-				// dataTable.asLists(String.class);
 			}
 		}
 	}
@@ -105,21 +99,17 @@ public class CucumberToUMLOtherLayerConverter extends ToUMLOtherLayerConverter {
 	protected void convertToMessage(Interaction anInteraction, Object o) {
 		MethodCallExpr mce = (MethodCallExpr) o;
 		Class owningClass = (Class) anInteraction.getOwner();
-		String importAlias = mce.getChildNodes().get(0).toString();
+		// get the factory class
+		String importAlias = mce.getChildNodes().getFirst().getChildNodes().getFirst().toString();
+		// get the factory class import statement
 		ElementImport classImport = ElementImportFactory.getElementImportByAlias(owningClass, importAlias);
-		String qualifiedName;
-		if (classImport != null) {
-			qualifiedName = classImport.getImportedElement().getQualifiedName();
-		} else {
-			// TODO this is a temp hack for displayKeyword in layer 2
-			qualifiedName = "pst::common::BusinessProcessModelTasks";
-		}
-		// TODO, the Factory classes shouldn't need theSystem passed to each method,
-		// they should interact with the project collection managing methods directly
+		// get the full name
+		String qualifiedName = classImport.getImportedElement().getQualifiedName();
+		// get the class from the next layer
 		Class importedClass = ClassFactory.getClass(UMLProject.theSystem, qualifiedName);
 		Message theMessage = MessageFactory.getMessage(anInteraction, importedClass, mce.getName().asString());
+		mce.getArguments();
 		for (Expression e : mce.getArguments()) {
-			// TODO make tests for these
 			String arg = "";
 			if (e instanceof NameExpr) {
 				arg = e.asNameExpr().getNameAsString();
@@ -132,11 +122,12 @@ public class CucumberToUMLOtherLayerConverter extends ToUMLOtherLayerConverter {
 			} else if (e instanceof MethodCallExpr) {
 				arg = e.asMethodCallExpr().toString();
 			} else {
-				// This is done purposely so that I can discover new expressions
+				// TODO throw an exception to find new expressions
 				arg = e.asNameExpr().getNameAsString();
 			}
-			ArgumentFactory.getArgument(theMessage, arg, "", true);
-
+			// when reading java source, the name of the arguments isn't known so I use the
+			// value as the name
+			ArgumentFactory.getArgument(theMessage, arg, arg, true);
 		}
 	}
 
@@ -157,6 +148,11 @@ public class CucumberToUMLOtherLayerConverter extends ToUMLOtherLayerConverter {
 
 	@Override
 	protected String convertImportNameToQualifiedName(String importName) {
-		return importName.replace(".", "::").replace("org::farhan::", "pst::");
+		String qualifiedName = importName.replace(".", "::");
+		if (qualifiedName.startsWith("org::farhan::")) {
+			return qualifiedName.replace("org::farhan::", "pst::");
+		} else {
+			return "pst::" + qualifiedName;
+		}
 	}
 }
